// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VixSrc Black Mirror 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc (via MediaFlow Proxy)",
    "meta": {
      "bytes": 2389338112,
      "countryCodes": [
        "it",
        "en",
      ],
      "height": 1080,
      "title": "Black.Mirror.S04E02.Arkangel.1080p.NF.WEB-DL.ITA.ENG.DDP5.1.H.264.mkv",
    },
    "sourceId": "vixsrc_it",
    "ttl": 900000,
    "url": "https://mediaflow-proxy.test/proxy/hls/manifest.m3u8?api_password=asdfg&h_user-agent=Mozilla%2F5.0+%28Windows+NT+10.0%3B+Win64%3B+x64%29+AppleWebKit%2F537.36+%28KHTML%2C+like+Gecko%29+Chrome%2F136.0.0.0+Safari%2F537.36&h_referer=https%3A%2F%2Fvixsrc.to%2Ftv%2F42009%2F4%2F2&d=https%3A%2F%2Fvixsrc.to%2Fplaylist%2F307316%3Ftoken%3D2f5004a3b15f4ccdb3446f2b132a0957%26expires%3D1755949828%26h%3D1",
  },
]
`;

exports[`VixSrc Black Mirror is excluded if no matching language was found 1`] = `[]`;

exports[`VixSrc Full Metal Jacket 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc (via MediaFlow Proxy)",
    "meta": {
      "bytes": 8544718848,
      "countryCodes": [
        "it",
        "en",
      ],
      "height": 1080,
      "title": "Full.metal.jacket.1987.1080p.x264.AC3.ITA.AAC.ENG.Subs.mkv",
    },
    "sourceId": "vixsrc_it",
    "ttl": 900000,
    "url": "https://mediaflow-proxy.test/proxy/hls/manifest.m3u8?api_password=asdfg&h_user-agent=Mozilla%2F5.0+%28Windows+NT+10.0%3B+Win64%3B+x64%29+AppleWebKit%2F537.36+%28KHTML%2C+like+Gecko%29+Chrome%2F136.0.0.0+Safari%2F537.36&h_referer=https%3A%2F%2Fvixsrc.to%2Fmovie%2F600&d=https%3A%2F%2Fvixsrc.to%2Fplaylist%2F219736%3Ftoken%3D689cf5587c2fec67fd83503a2a7dfd64%26expires%3D1755949827%26h%3D1",
  },
]
`;
